WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184081
Fails to build webkitgtk+ after git-svn-id:
http://svn.webkit.org/repository/webkit/trunk@229877
268f45cc-cd09-0410-ab3c-d52691b4dbfc
https://bugs.webkit.org/show_bug.cgi?id=184081
Summary
Fails to build webkitgtk+ after git-svn-id: http://svn.webkit.org/repository/...
Milan Crha
Reported
2018-03-28 06:34:44 PDT
After commit 700788272e59413f03b1ba7ea4e896f16fe78a1b, which references itself as: Unreviewed, silence unused variable warning Patch by Michael Catanzaro <
mcatanzaro@igalia.com
> on 2018-03-22 * UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::decidePolicyForNavigationAction): git-svn-id:
http://svn.webkit.org/repository/webkit/trunk@229877
268f45cc-cd09-0410-ab3c-d52691b4dbfc fails to build here. The only code change there was: return receivedPolicyDecision(PolicyAction::Ignore, *frame, listenerID, &m_navigationState->navigation(newNavigationID), { }); +#else + UNUSED(newNavigationID); #endif where the 'UNUSED' is actually meant to be 'UNUSED_PARAM'.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2018-03-28 08:15:51 PDT
Yes. And yet, what I don't understand is: why does it build for me? Why does it build for all the bots? ENABLE(CONTENT_FILTERING) is always disabled for GTK. I'll try to investigate.
Michael Catanzaro
Comment 2
2018-03-28 09:10:52 PDT
Well this is weird. When I change it to: #if ENABLE(CONTENT_FILTERING) if (frame->didHandleContentFilterUnblockNavigation(request)) return receivedPolicyDecision(PolicyAction::Ignore, *frame, listenerID, &m_navigationState->navigation(newNavigationID), { }); #else aoeunhtsaoeuhtns; UNUSED(newNavigationID); #endif then it fails to build, so the file is definitely compiled without ENABLE(CONTENT_FILTERING). I don't know why it doesn't work for you, and I don't know where UNUSED() is defined. Anyway, I clearly meant UNUSED_PARAM(), so I'll just change it.
Michael Catanzaro
Comment 3
2018-03-28 09:53:01 PDT
Committed
r230032
: <
https://trac.webkit.org/changeset/230032
>
Michael Catanzaro
Comment 4
2018-03-28 09:55:21 PDT
It's defined here: bmalloc/bmalloc/BAssert.h:#define UNUSED(x) ((void)x) Were you building with -DUSE_SYSTEM_MALLOC=ON? :) Anyway, clearly a mistake, but it *did* fix the unused parameter warning!
Milan Crha
Comment 5
2018-03-28 10:01:23 PDT
True, -DUSE_SYSTEM_MALLOC=ON is one of my arguments to CMake.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug